# game

./: Cargo.toml
assets/aseprite/: characters.aseprite  floors.aseprite
assets/ldtk/: world.ldtk
docs/inspirations/exok/: celeste.afdesign
src/: main.rs
src/camera/: mod.rs  plugin.rs  systems.rs
src/colliders/: components.rs
src/fps/: components.rs  constants.rs  mod.rs  plugin.rs  systems.rs
src/gizmos/: plugin.rs  systems.rs
src/input/: mod.rs  plugin.rs  systems.rs
src/level/: constants.rs  mod.rs  plugin.rs  resources.rs  utils.rs
src/physics/: components.rs  mod.rs  plugin.rs
src/player/: bundles.rs  components.rs  constants.rs  mod.rs  plugin.rs
src/player/components/: actions.rs  mod.rs  states.rs
src/player/components/tickers/: buffer.rs  coyote.rs  lock.rs  mod.rs
src/player/components/timers/: buffer.rs  coyote.rs  lock.rs
src/player/components/velocity/: mod.rs  x.rs  y.rs
src/player/systems/: diagonal.rs  horizontal.rs  input.rs  lock.rs  mod.rs  spawn.rs  translate.rs  vertical.rs
src/player/systems/vertical/: mod.rs  processors.rs  swappers.rs
src/sprites/: bundles.rs  components.rs  mod.rs  plugin.rs  systems.rs
src/time/: components.rs  constants.rs  mod.rs  plugin.rs  structs.rs
src/utils/: math.rs  mod.rs  signum.rs
src/walls/: mod.rs  plugin.rs  systems.rs
