[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Important! wgpu/Bevy needs this!
[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

# https://rapier.rs/docs/user_guides/rust/common_mistakes
[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
color-eyre = "0.6.2"
image = "0.24.6"
rand = "0.8.5"
